tests/incremental_cycle/incremental_cycle.exp
Error ----------------------------------------------------------------- B.js:6:6

Cannot extend `A` with `B` because in property `c`, `C` is incompatible with
string.

Error: B.js:6
  6:   c: C;
          ^ Cannot extend `A` [1] with `B` because in property `c`, `C` [2] is incompatible with string [3].
  References:
    5: class B extends A {
                       ^ [1]: `A`
    6:   c: C;
            ^ [2]: `C`
    5:   c: string;
            ^^^^^^ [3]: string. See: A.js:5

Error ----------------------------------------------------------------- C.js:6:6

Cannot extend `A` with `C` because in property `b`, `B` is incompatible with
number.

Error: C.js:6
  6:   b: B;
          ^ Cannot extend `A` [1] with `C` because in property `b`, `B` [2] is incompatible with number [3].
  References:
    5: class C extends A {
                       ^ [1]: `A`
    6:   b: B;
            ^ [2]: `B`
    4:   b: number;
            ^^^^^^ [3]: number. See: A.js:4


Found 2 errors
Error ----------------------------------------------------------------- C.js:6:6

Cannot extend `A` with `C` because in property `b`, string is incompatible with
number.

Error: C.js:6
  6:   b: B;
          ^ Cannot extend `A` [1] with `C` because in property `b`, string [2] is incompatible with number [3].
  References:
    5: class C extends A {
                       ^ [1]: `A`
    6:   b: B;
            ^ [2]: string
    4:   b: number;
            ^^^^^^ [3]: number. See: A.js:4


Found 1 error
Error ----------------------------------------------------------------- C.js:6:6

Cannot extend `A` with `C` because in property `b`, string is incompatible with
number.

Error: C.js:6
  6:   b: B;
          ^ Cannot extend `A` [1] with `C` because in property `b`, string [2] is incompatible with number [3].
  References:
    5: class C extends A {
                       ^ [1]: `A`
    6:   b: B;
            ^ [2]: string
    4:   b: number;
            ^^^^^^ [3]: number. See: A.js:4


Found 1 error
Error ----------------------------------------------------------------- C.js:6:6

Cannot extend `A` with `C` because in property `b`, string is incompatible with
number.

Error: C.js:6
  6:   b: B;
          ^ Cannot extend `A` [1] with `C` because in property `b`, string [2] is incompatible with number [3].
  References:
    5: class C extends A {
                       ^ [1]: `A`
    6:   b: B;
            ^ [2]: string
    4:   b: number;
            ^^^^^^ [3]: number. See: A.js:4


Found 1 error
